fix: break on layers

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -166,3 +166,7 @@
 .btn-cve-bg-gray {
   background-color: #AAAAAA !important;
 }
+
+.word-break-all {
+  word-break: break-all;
+}
